// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<button
  className="button color--primary size--small variant--contained"
  style={
    Object {
      "width": "50px",
    }
  }
  type="button"
>
  <span
    className="main-content"
  >
    Button
  </span>
</button>
`;

exports[`should render icon button correctly 1`] = `
<button
  className="button color--default shape--circle size--medium variant--default"
  style={Object {}}
  type="button"
>
  <span
    className="main-content"
  >
    icon
  </span>
</button>
`;

exports[`should work with different colors 1`] = `
Array [
  <button
    className="button color--primary size--medium variant--default"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      primary
    </span>
  </button>,
  <button
    className="button color--secondary size--medium variant--default"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      secondary
    </span>
  </button>,
  <button
    className="button color--error size--medium variant--default"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      error
    </span>
  </button>,
  <button
    className="button color--warning size--medium variant--default"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      warning
    </span>
  </button>,
  <button
    className="button color--info size--medium variant--default"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      info
    </span>
  </button>,
  <button
    className="button color--success size--medium variant--default"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      success
    </span>
  </button>,
  <button
    className="button color--dark size--medium variant--default"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      dark
    </span>
  </button>,
  <button
    className="button color--light size--medium variant--default"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      light
    </span>
  </button>,
]
`;

exports[`should work with different shapes 1`] = `
Array [
  <button
    className="button color--default shape--circle size--medium variant--default"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      circle
    </span>
  </button>,
  <button
    className="button color--default shape--square size--medium variant--default"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      square
    </span>
  </button>,
]
`;

exports[`should work with different sizes 1`] = `
Array [
  <button
    className="button color--default size--small variant--default"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      small
    </span>
  </button>,
  <button
    className="button color--default size--medium variant--default"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      medium
    </span>
  </button>,
  <button
    className="button color--default size--large variant--default"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      large
    </span>
  </button>,
]
`;

exports[`should work with different variants 1`] = `
Array [
  <button
    className="button color--default size--medium variant--default"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      default
    </span>
  </button>,
  <button
    className="button color--default size--medium variant--outlined"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      outlined
    </span>
  </button>,
  <button
    className="button color--default size--medium variant--contained"
    style={Object {}}
    type="button"
  >
    <span
      className="main-content"
    >
      contained
    </span>
  </button>,
]
`;
